// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots matches snapshots of 1h bleed 1`] = `
Array [
  "LocalIncreasedPhysicalDamageEnhancedMod",
  "LocalAddedFireDamageEnhancedMod_",
  "LocalAddedColdDamageEnhancedMod",
  "LocalAddedLightningDamageEnhancedMod",
  "LocalIncreasedAttackSpeedEnhancedMod",
]
`;

exports[`snapshots matches snapshots of 1h bleed 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedPhysicalDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedFireDamageEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedColdDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedLightningDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedAttackSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of 1h poisoners 1`] = `
Array [
  "LocalIncreasedPhysicalDamageEnhancedMod",
  "LocalAddedFireDamageEnhancedMod_",
  "LocalAddedColdDamageEnhancedMod",
  "LocalAddedLightningDamageEnhancedMod",
  "LocalIncreasedAttackSpeedEnhancedMod",
  "PoisonDurationEnhancedMod",
  "ChanceToPoisonEnhancedMod",
  "PoisonDamageEnhancedAttacksMod",
]
`;

exports[`snapshots matches snapshots of 1h poisoners 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedPhysicalDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedFireDamageEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedColdDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedLightningDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedAttackSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "PoisonDurationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ChanceToPoisonEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "PoisonDamageEnhancedAttacksMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of 2h bleed 1`] = `
Array [
  "LocalIncreasedPhysicalDamageEnhancedMod",
  "LocalAddedFireDamageEnhancedTwoHandMod",
  "LocalAddedColdDamageEnhancedTwoHandMod",
  "LocalAddedLightningDamageEnhancedTwoHandMod",
  "LocalIncreasedAttackSpeedEnhancedMod",
]
`;

exports[`snapshots matches snapshots of 2h bleed 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedPhysicalDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedFireDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedColdDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedLightningDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedAttackSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of 2h poisoner 1`] = `
Array [
  "LocalIncreasedPhysicalDamageEnhancedMod",
  "LocalAddedFireDamageEnhancedTwoHandMod",
  "LocalAddedColdDamageEnhancedTwoHandMod",
  "LocalAddedLightningDamageEnhancedTwoHandMod",
  "LocalIncreasedAttackSpeedEnhancedMod",
  "PoisonDurationEnhancedMod",
  "ChanceToPoisonEnhancedMod",
  "PoisonDamageEnhancedAttacksMod",
]
`;

exports[`snapshots matches snapshots of 2h poisoner 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedPhysicalDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedFireDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedColdDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedLightningDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedAttackSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "PoisonDurationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ChanceToPoisonEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "PoisonDamageEnhancedAttacksMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of amulets 1`] = `
Array [
  "IncreasedLifeEnhancedMod",
  "IncreasedManaEnhancedModOnHit_",
  "IncreasedManaEnhancedModRegen",
  "IncreasedEnergyShieldEnhancedModES",
  "IncreasedEnergyShieldEnhancedModRegen_",
  "LifeRegenerationEnhancedMod",
  "FireResistEnhancedModLeech",
  "ColdResistEnhancedModLeech",
  "LightningResistEnhancedModLeech_",
]
`;

exports[`snapshots matches snapshots of amulets 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedLifeEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedManaEnhancedModOnHit_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedManaEnhancedModRegen",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedEnergyShieldEnhancedModES",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedEnergyShieldEnhancedModRegen_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LifeRegenerationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "FireResistEnhancedModLeech",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ColdResistEnhancedModLeech",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LightningResistEnhancedModLeech_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of belts 1`] = `
Array [
  "IncreasedLifeEnhancedMod",
  "IncreasedEnergyShieldEnhancedModES",
  "IncreasedEnergyShieldEnhancedModRegen_",
  "LifeRegenerationEnhancedMod",
]
`;

exports[`snapshots matches snapshots of belts 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedLifeEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedEnergyShieldEnhancedModES",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedEnergyShieldEnhancedModRegen_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LifeRegenerationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of body armour 1`] = `
Array [
  "IncreasedLifeEnhancedBodyMod___",
  "ChaosResistEnhancedMod_",
]
`;

exports[`snapshots matches snapshots of body armour 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedLifeEnhancedBodyMod___",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ChaosResistEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of boots 1`] = `
Array [
  "IncreasedManaEnhancedModPercent",
  "MovementVelocityEnhancedModSpeed",
  "MovementVelocityEnhancedModDodge_",
  "MovementVelocityEnhancedModSpellDodge_",
]
`;

exports[`snapshots matches snapshots of boots 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedManaEnhancedModPercent",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "MovementVelocityEnhancedModSpeed",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "MovementVelocityEnhancedModDodge_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "MovementVelocityEnhancedModSpellDodge_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of bows 1`] = `
Array [
  "LocalIncreasedPhysicalDamageEnhancedMod",
  "LocalAddedFireDamageEnhancedTwoHandMod",
  "LocalAddedColdDamageEnhancedTwoHandMod",
  "LocalAddedLightningDamageEnhancedTwoHandMod",
  "LocalIncreasedAttackSpeedRangedEnhancedMod_",
  "PoisonDurationEnhancedMod",
  "ChanceToPoisonEnhancedMod",
  "PoisonDamageEnhancedAttacksMod",
]
`;

exports[`snapshots matches snapshots of bows 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedPhysicalDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedFireDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedColdDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedLightningDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedAttackSpeedRangedEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "PoisonDurationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ChanceToPoisonEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "PoisonDamageEnhancedAttacksMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of daggers 1`] = `
Array [
  "LocalIncreasedPhysicalDamageEnhancedMod",
  "LocalAddedFireDamageEnhancedMod_",
  "LocalAddedColdDamageEnhancedMod",
  "LocalAddedLightningDamageEnhancedMod",
  "TrapDamageOnWeaponEnhancedMod",
  "TrapThrowSpeedEnhancedMod",
  "TrapCooldownRecoveryAndDurationEnhancedMod",
  "TrapAreaOfEffectEnhancedMod_",
  "LocalIncreaseSocketedTrapGemLevelEnhancedMod_",
  "LocalIncreasedAttackSpeedEnhancedMod",
  "PoisonDurationEnhancedMod",
  "ChanceToPoisonEnhancedMod",
  "PoisonDamageEnhancedAttacksMod",
  "PoisonDamageEnhancedSpellsMod",
]
`;

exports[`snapshots matches snapshots of daggers 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedPhysicalDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedFireDamageEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedColdDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedLightningDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapDamageOnWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapThrowSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapCooldownRecoveryAndDurationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapAreaOfEffectEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreaseSocketedTrapGemLevelEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedAttackSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "PoisonDurationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ChanceToPoisonEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "PoisonDamageEnhancedAttacksMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "PoisonDamageEnhancedSpellsMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of gloves 1`] = `
Array [
  "IncreasedManaEnhancedModPercent",
  "AddedFireDamageEnhancedMod",
  "AddedColdDamageEnhancedMod",
  "AddedLightningDamageEnhancedMod",
  "FireResistEnhancedModAilments",
  "ColdResistEnhancedModAilments__",
  "LightningResistEnhancedModAilments",
]
`;

exports[`snapshots matches snapshots of gloves 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedManaEnhancedModPercent",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "AddedFireDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "AddedColdDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "AddedLightningDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "FireResistEnhancedModAilments",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ColdResistEnhancedModAilments__",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LightningResistEnhancedModAilments",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of helmets 1`] = `
Array [
  "IncreasedManaEnhancedModPercent",
  "IncreasedManaEnhancedModReservation",
  "FireResistEnhancedModPhys_",
  "ColdResistEnhancedModPhys",
  "LightningResistEnhancedModPhys",
]
`;

exports[`snapshots matches snapshots of helmets 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedManaEnhancedModPercent",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedManaEnhancedModReservation",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "FireResistEnhancedModPhys_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ColdResistEnhancedModPhys",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LightningResistEnhancedModPhys",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of rings 1`] = `
Array [
  "IncreasedLifeEnhancedMod",
  "IncreasedManaEnhancedModOnHit_",
  "IncreasedManaEnhancedModRegen",
  "IncreasedManaEnhancedModCost",
  "IncreasedEnergyShieldEnhancedModES",
  "IncreasedEnergyShieldEnhancedModRegen_",
  "LifeRegenerationEnhancedMod",
]
`;

exports[`snapshots matches snapshots of rings 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedLifeEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedManaEnhancedModOnHit_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedManaEnhancedModRegen",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedManaEnhancedModCost",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedEnergyShieldEnhancedModES",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedEnergyShieldEnhancedModRegen_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LifeRegenerationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of sceptres 1`] = `
Array [
  "LocalIncreasedPhysicalDamageEnhancedMod",
  "LocalAddedFireDamageEnhancedMod_",
  "LocalAddedColdDamageEnhancedMod",
  "LocalAddedLightningDamageEnhancedMod",
  "SpellDamageOnWeaponEnhancedMod",
  "TrapDamageOnWeaponEnhancedMod",
  "TrapThrowSpeedEnhancedMod",
  "TrapCooldownRecoveryAndDurationEnhancedMod",
  "TrapAreaOfEffectEnhancedMod_",
  "LocalIncreaseSocketedTrapGemLevelEnhancedMod_",
  "MinionDamageOnWeaponEnhancedMod__",
  "MinionAttackAndCastSpeedEnhancedMod",
  "MinionDurationEnhancedMod_",
  "LocalIncreaseSocketedMinionGemLevelEnhancedMod",
  "FireDamagePrefixOnWeaponEnhancedMod",
  "ColdDamagePrefixOnWeaponEnhancedMod",
  "LightningDamagePrefixOnWeaponEnhancedMod_",
  "IncreasedCastSpeedEnhancedMod_",
  "LocalIncreasedAttackSpeedRangedEnhancedMod_",
]
`;

exports[`snapshots matches snapshots of sceptres 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedPhysicalDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedFireDamageEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedColdDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedLightningDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "SpellDamageOnWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapDamageOnWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapThrowSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapCooldownRecoveryAndDurationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapAreaOfEffectEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreaseSocketedTrapGemLevelEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "MinionDamageOnWeaponEnhancedMod__",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "MinionAttackAndCastSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "MinionDurationEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreaseSocketedMinionGemLevelEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "FireDamagePrefixOnWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ColdDamagePrefixOnWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LightningDamagePrefixOnWeaponEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedCastSpeedEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedAttackSpeedRangedEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of shield 1`] = `
Array [
  "FireDamagePrefixOnWeaponEnhancedMod",
  "ColdDamagePrefixOnWeaponEnhancedMod",
  "LightningDamagePrefixOnWeaponEnhancedMod_",
  "ChaosResistEnhancedMod_",
]
`;

exports[`snapshots matches snapshots of shield 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "FireDamagePrefixOnWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ColdDamagePrefixOnWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LightningDamagePrefixOnWeaponEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ChaosResistEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;

exports[`snapshots matches snapshots of staves 1`] = `
Array [
  "LocalIncreasedPhysicalDamageEnhancedMod",
  "LocalAddedFireDamageEnhancedTwoHandMod",
  "LocalAddedColdDamageEnhancedTwoHandMod",
  "LocalAddedLightningDamageEnhancedTwoHandMod",
  "SpellDamageOnTwoHandWeaponEnhancedMod",
  "TrapDamageOnTwoHandWeaponEnhancedMod",
  "TrapThrowSpeedEnhancedMod",
  "TrapCooldownRecoveryAndDurationEnhancedMod",
  "TrapAreaOfEffectEnhancedMod_",
  "LocalIncreaseSocketedTrapGemLevelEnhancedMod_",
  "MinionDamageOnTwoHandWeaponEnhancedMod",
  "MinionAttackAndCastSpeedEnhancedMod",
  "MinionDurationEnhancedMod_",
  "LocalIncreaseSocketedMinionGemLevelEnhancedMod",
  "FireDamagePrefixOnTwoHandWeaponEnhancedMod",
  "ColdDamagePrefixOnTwoHandWeaponEnhancedMod",
  "LightningDamagePrefixOnTwoHandWeaponEnhancedMod",
  "IncreasedCastSpeedTwoHandEnhancedMod",
]
`;

exports[`snapshots matches snapshots of staves 2`] = `
Array [
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreasedPhysicalDamageEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedFireDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedColdDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalAddedLightningDamageEnhancedTwoHandMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "SpellDamageOnTwoHandWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapDamageOnTwoHandWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapThrowSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapCooldownRecoveryAndDurationEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "TrapAreaOfEffectEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreaseSocketedTrapGemLevelEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "MinionDamageOnTwoHandWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "MinionAttackAndCastSpeedEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "MinionDurationEnhancedMod_",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LocalIncreaseSocketedMinionGemLevelEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "FireDamagePrefixOnTwoHandWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "ColdDamagePrefixOnTwoHandWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "LightningDamagePrefixOnTwoHandWeaponEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
  Object {
    "applicable": Object {
      "above_lld_level": false,
      "already_present": false,
      "domain_full": true,
      "lower_ilvl": false,
      "wrong_domain": false,
    },
    "mod": "IncreasedCastSpeedTwoHandEnhancedMod",
    "spawnable": Object {
      "no_matching_tags": false,
      "not_matching_itemclass": false,
      "spawnweight_zero": false,
    },
    "spawnweight": 1000,
  },
]
`;
